--- a/fraud_detection_cleaned.ipynb
+++ b/fraud_detection_cleaned.ipynb
@@ -1766,6 +1766,7 @@
     "\n",
     "2. How to show the feature importance for the final model (and make sense of it)? \n",
     "   We tried something like in the cell below.\n",
+    "   But can the day for example really be an important feature for future predictions? \n",
     "\n",
     "3. Are there any important steps missing in our notebook? \n",
     "\n"
